# multi_llm_chatbot

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  gradio_app.py  llms.py  main.py  models.py
app/api/: chatbot.py  debug.py  document.py
app/core/: adapters.py  db.py  db_check.py  logging_config.py  pipeline.py
app/models/: user_document.py
app/schemas/: chat.py  document.py
app/services/: document_service.py  embedding_service.py  retrieval_service.py
db/: init.sql
llm/services/: document_service.py
tests/: conftest.py  test_documents.py
