[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-llm-chatbot"
version = "0.2.1"
description = "A multilingual, retrieval-augmented chatbot using LangChain, TogetherAI, FastAPI, and pgvector."
authors = [{ name = "Ali Khalaji" }]
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["LLM", "Chatbot", "RAG", "LangChain", "FastAPI", "pgvector", "TogetherAI"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "gradio==5.44.1",
    "langchain==0.3.27",
    "langchain-anthropic==0.3.19",
    "langchain-google-genai==2.1.10",
    "langchain-huggingface==0.3.1",
    "langchain-mistralai==0.2.11",
    "langchain-openai==0.3.32",
    "langchain-together==0.3.1",
    "langdetect",
    "pgvector==0.4.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.43",
    "types-requests==2.32.4.20250913",
    "uvicorn==0.35.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
